css/stylesheet.css
* {
    box-sizing: border-box;
}

body {
    align-items: center;
    height: 100%;
    font-family: 'Bungee', cursive;
    color: #333;
    background-color: #fff;
}

.container {
    display: flex;
}

.header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    padding: 10px;
    min-height: 100px;
    border-bottom: 1px black;
}

.game {
    display: flex;
    left: 50%;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    margin-top: 20px;
}

.up {
    display: flex;
    flex-direction: row;
    justify-content: center;
    max-height: 150px;
}

.pointer {
    margin: 0px 5px;
    border-radius: 50%;
    width: 50px;
    height: 50px;
}

.board {
    display: flex;
    flex-direction: row;
    justify-content: center;
    z-index: 9;
    margin: 5px auto;
    box-shadow: 4px 4px 2px 0 #455A64;
    border-top: 2px solid #ECEFF1;
    border-left: 2px solid #ECEFF1;
    border-radius: 20px;
    background-color: #1b286a;
    width: 440px;
    height: 380px;
}

.column {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-bottom: 10px;
}

.pos {
    margin: 0px 5px;
    border-radius: 50%;
    background-color: white;
    width: 50px;
    height: 50px;
}

#moving {
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 50%;
    background: #E24E42;
    width: 50px;
    height: 50px;
}

.empty-red {
    transition: background-position .01s ease;
    background-image: linear-gradient(to bottom, white 50%, #E24E42 50%);
    background-size: 100% 200%;
}

.empty-yellow {
    transition: background-position .01s ease;
    background-image: linear-gradient(to bottom, white 50%, #FFD20D 50%);
    background-size: 100% 200%;
}

.empty-red.show {
    transition: background-position 0s;
    background-position: 0 100%;
}

.empty-yellow.show {
    transition: background-position 0s;
    background-position: 0 100%;
}

.hidden {
    display: none;
    z-index: -1;
}

.red {
    background-color: #FF0000;
}

.yellow {
    background-color: #FFD20D;
}

.below {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: 150px;
}

.modal {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 99;
    box-shadow: 0px 0px 20px rgba(56, 56, 56, .2);
    border-radius: 15px;
    background-color: white;
    padding: 20px 30px;
    max-width: 600px;
    max-height: 300px;
    font-size: 2em;
    text-align: center;
    transition: all 800ms ease-in;
    z-index: 999;
}

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99;
    transition: background-color 10s ease-in-out;
    background-color: rgba(0, 0, 0, .3);
    width: 100%;
    height: 100%;
}

.x-button {
    cursor: pointer;
    width: 20px;
    height: 20px;
    text-align: center;
    line-height: 20px;
    right: 0;
    font-size: 30px;
    float: right;
    margin: 5px;
}

.content {
    padding: 20px;
}

.x-button span {
    transform: rotate(45deg);
    display: block;
}

.modal-footer {
    height: 50px;
}

.modal-button {
    border: 4px solid #fff;
    background-color: #1b286a;
    color: white;
    border-radius: 100px;
    width: 100px;
    height: 40px;
    font-size: .5em;
    text-align: center;
}

.modal-button:hover {

}

.logo {
    display: inline;
    border-radius: 50%;
    background-color: #1b286a;
    padding: 10px;
    margin: 10px;
    width: 70px;
    height: 70px;
    color: white;
    font-size: 3em;
    text-align: center;
    align-self: flex-start;
}

.logo:hover {
    top: -5px;
    transform: rotate(360deg);
    transition: all 1s ease-in-out;
    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .2);
}

.title h1 {
    display: inline;
    font-size: 3em;
}

.player {
    display: inline-block;
    padding: 5px;
    border-radius: 68px;
    align-self: flex-end;
    font-size: 1em;
    margin-top: 30px;
}

.player p {
    text-align: center;
}

#player1 {
    margin: 30px 50px 10px 20px;
}

#player2 {
    margin: 30px 20px 10px 50px;
}

.score {
    margin: 5px;
    font-family: 'Bungee Shade', cursive;
}

.pointer div {
    -webkit-transition: 1s;
    position: absolute;
    z-index: -1;
}

